fix overlap issue when block is in a section with background color

--- a/blocks/v2-truck-builder/v2-truck-builder.css
+++ b/blocks/v2-truck-builder/v2-truck-builder.css
@@ -131,6 +131,7 @@
 .v2-truck-builder__item-image {
   order: 1;
   position: relative;
+  z-index: 2;
   width: 100vw;
   height: 100vw;
   max-height: 512px;
@@ -161,7 +162,7 @@
   position: absolute;
   top: 0;
   left: -50vw;
-  z-index: -1;
+  z-index: 1;
   aspect-ratio: 1;
   height: 100vw;
   max-height: 512px;
